--- a/HTML - Personal Site/contactme.html
+++ b/HTML - Personal Site/contactme.html
@@ -1,18 +1,34 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>Contact Me</title>
-  </head>
-  <body>
-    <h1>My contact details</h1>
-    <p>+4745234812</p>
-    <p>patrickjthansen@gmail.com</p>
+
+<head>
+  <meta charset="utf-8">
+  <title>Contact Me</title>
+</head>
+
+<body>
+  <h1>My contact details</h1>
+  <p>+4745234812</p>
+  <p>patrickjthansen@gmail.com</p>
+  <hr>
+  <form action="mailto:info@patrickjthansen.com" method="post" enctype="text/plain">
+    <label>Your Name:</label>
+    <input type="text" name="yourName" value=""><br>
+    <label>Your Email:</label>
+    <input type="email" name="yourEmail" value=""><br>
+    <label>Your Message:</label><br>
+    <textarea name="yourMessage" rows="10" cols="30"></textarea><br>
+    <input type="submit" name="">
+  </form>
+
+  <!-- <h3>Social Media</h3>
     <ol>
       <li><a href="https://www.facebook.com/PatrickJT">Facebook</a></li>
       <li><a href="https://www.linkedin.com/in/patrick-james-hansen-0a5796b4/">LinkedIn</a></li>
       <li><a href="https://github.com/patrickjthansen">GitHub</a></li>
       <li><a href="https://twitter.com/PATMANZ_">Twitter</a></li>
     </ol>
-  </body>
+    -->
+</body>
+
 </html>
