--- a/HTML - Personal Site/index.html
+++ b/HTML - Personal Site/index.html
@@ -7,19 +7,79 @@
 </head>
 
 <body>
+  <table cellspacing="20">
+    <tr>
+      <td><img src="https://media-exp1.licdn.com/dms/image/C4E03AQEIekEEVZSoeQ/profile-displayphoto-shrink_400_400/0?e=1605744000&v=beta&t=Fl6HdnswkNFKETU1O4hkU9R4S10evHJwNumWh1x14Xg" alt="patrick profile picture"></td>
+      <td>
+        <h1>Patrick James Hansen</h1>
+        <p><em>Computer Science Student at <strong><a href="https://www.oslomet.no/en/">Oslo Metropolitan University</a></strong></em></p>
+        <p> I ❤️ Pizza </p>
+      </td>
+    </tr>
+  </table>
   <!-- Using images stored locally on your computer -->
   <!-- <img src="patrick.png.jpg" alt="patrick profile picture">  -->
-  <img src="https://pbs.twimg.com/profile_images/1305125202158813185/beH_qhQz_400x400.jpg" alt="patrick profile picture">
-  <p><em>Computer Science Student at <strong><a href="https://www.oslomet.no/en/">Oslo Metropolitan University</a></strong></em></p>
-  <p> I ❤️ Pizza </p>
   <hr>
-<h3>Education</h3>
-<ul>
-  <li><strong>Oslo Metropolitan University</strong><em> - Applied Computer Science</em></li>
-  <li><strong>BI Norwegian Business School</strong><em> - Business Administration with specialisation in International Business</em></li>
-</ul>
-<a href="hobbies.html">My Hobbies</a> <br>
-<a href="contactme.html">Contact Me</a>
+  <h3>Education</h3>
+  <ul>
+    <li><strong>Oslo Metropolitan University</strong><em> - Applied Computer Science</em></li>
+    <li><strong>BI Norwegian Business School</strong><em> - Business Administration with specialisation in International Business</em></li>
+  </ul>
+  <hr>
+  <h3>Work Experience</h3>
+  <table cellspacing="10">
+    <thead>
+      <tr>
+        <th>Dates</th>
+        <th>Workplace</th>
+      </tr>
+    </thead>
+    <tbody>
+
+    </tbody>
+    <tfoot>
+
+    </tfoot>
+    <tr>
+      <td>Aug 2019 - Present</td>
+      <td>Telia Norway</td>
+    </tr>
+    <tr>
+      <td>Mar 2017 - Aug 2019</td>
+      <td>Dixons Travel UK</td>
+    </tr>
+    <tr>
+      <td>Jul 2015 - Dec 2016</td>
+      <td>Capi Lux</td>
+    </tr>
+    <tr>
+      <td>Mar 2014 - Jul 2016</td>
+      <td>SSP Norway</td>
+    </tr>
+    <tr>
+      <td>Mar 2013 - Mar 2014</td>
+      <td>Burger King</td>
+    </tr>
+  </table>
+  <hr>
+  <h3>Skills</h3>
+        <table cellspacing="10">
+          <tr>
+            <td>HTML & CSS</td>
+            <td>⭐⭐⭐⭐⭐</td>
+          </tr>
+          <tr>
+            <td>Javascript</td>
+            <td>⭐⭐⭐⭐⭐</td>
+          </tr>
+          <tr>
+            <td>Python</td>
+            <td>⭐⭐⭐⭐⭐</td>
+          </tr>
+        </table>
+  <hr>
+  <a href="hobbies.html">My Hobbies</a> <br>
+  <a href="contactme.html">Contact Me</a>
 </body>
 
 </html>
