Changed the skills section

--- a/HTML - Personal Site/index.html
+++ b/HTML - Personal Site/index.html
@@ -66,15 +66,15 @@
         <table cellspacing="10">
           <tr>
             <td>HTML & CSS</td>
-            <td>⭐⭐⭐⭐⭐</td>
+            <td>Photography & Design</td>
           </tr>
           <tr>
             <td>Javascript</td>
-            <td>⭐⭐⭐⭐⭐</td>
+            <td>Presentations</td>
           </tr>
           <tr>
             <td>Python</td>
-            <td>⭐⭐⭐⭐⭐</td>
+            <td>English</td>
           </tr>
         </table>
   <hr>
