--- a/HTML - Personal Site/index.html
+++ b/HTML - Personal Site/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Patrick James' Homepage</title>
+<link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
