Changed margin on <hr> and skills

--- a/HTML - Personal Site/index.html
+++ b/HTML - Personal Site/index.html
@@ -67,14 +67,14 @@
         <table cellspacing="10">
           <tr>
             <td>HTML & CSS</td>
-            <td>Photography & Design</td>
+            <td>Java</td>
           </tr>
           <tr>
-            <td>Javascript</td>
+            <td>Graphic Design</td>
             <td>Presentations</td>
           </tr>
           <tr>
-            <td>Python</td>
+            <td>Photography</td>
             <td>English</td>
           </tr>
         </table>
