Changed backgroundcolor, skills and image size

--- a/HTML - Personal Site/index.html
+++ b/HTML - Personal Site/index.html
@@ -10,7 +10,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="https://media-exp1.licdn.com/dms/image/C4E03AQEIekEEVZSoeQ/profile-displayphoto-shrink_400_400/0?e=1605744000&v=beta&t=Fl6HdnswkNFKETU1O4hkU9R4S10evHJwNumWh1x14Xg" alt="patrick profile picture"></td>
+      <td><img src="images\BI Profilbilde Circular.png" alt="patrick profile picture"></td>
       <td>
         <h1>Patrick James Hansen</h1>
         <p><em>Computer Science Student at <strong><a href="https://www.oslomet.no/en/">Oslo Metropolitan University</a></strong></em></p>
@@ -23,7 +23,7 @@
   <hr>
   <h3>Education</h3>
   <ul>
-    <li><strong>Oslo Metropolitan University</strong><em> - Applied Computer Science</em></li>
+    <li><strong>Oslo Metropolitan University</strong><em> - Computer Science</em></li>
     <li><strong>BI Norwegian Business School</strong><em> - Business Administration with specialisation in International Business</em></li>
   </ul>
   <hr>
@@ -71,11 +71,11 @@
           </tr>
           <tr>
             <td>Graphic Design</td>
-            <td>Presentations</td>
+            <td>Photography</td>
           </tr>
           <tr>
-            <td>Photography</td>
             <td>English</td>
+            <td>Presentations</td>
           </tr>
         </table>
   <hr>
