Added another page

--- a/HTML - Personal Site/index.html
+++ b/HTML - Personal Site/index.html
@@ -80,7 +80,8 @@
         </table>
   <hr>
   <a href="hobbies.html">My Hobbies</a> <br>
-  <a href="contactme.html">Contact Me</a>
+  <a href="contactme.html">Contact Me</a> <br>
+  <a href="quittingcomsci.html">Dropping out of Computer Science</a>
 </body>
 
 </html>
