Changed the "Quitting com sci" page.

--- a/HTML - Personal Site/quittingcomsci.html
+++ b/HTML - Personal Site/quittingcomsci.html
@@ -12,52 +12,75 @@
   <p>
     To whom it may interest.
   </p>
+
   <p>
-    I am dropping out of my Computer Science program at Oslo Metropolitan University.
-    There are a myriad of factors and reasons and I could go on for while, but I'll try to keep as short as I can.
+    It may or may not come across as a shock, but I am dropping out of the Computer Science program at Oslo Metropolitan
+    University. There are a myriad of factors and reasons behind why I am choosing to do so, and I could go on about it for while.
   </p>
-<p>TLDR at the end.</p>
 
-<p>
-  In high school I studied Media & Communication. I entered the program with a love for photography and I ended up
-  picking up graphic design along the way. I excelled and thrived working on creative projects. I went on to get
-  straight A's and my teachers were shocked when they found out I would go on to study Business Administration at BI
-  in Oslo. I loved photography and design but I didn't see myself making "a lot" of money doing that (which was my
-  goal at the time) so I wanted something more cookie cutter and more stable (which is what I thought I wanted).
-  I went on to graduate from BI, specializing in International Business. Something I am proud of, however I had a
-  feeling that I did not want to work crunching numbers and looking at spreadsheets all day.
-</p>
+  <p>
+    TLDR at the end.
+  </p>
 
-<p>
-  I went on to work a part time job for two years not really doing anything in particular to figure out what I wanted
-  to do, before randomly looking for programs to get back into school. I stumbled upon a few different programs but
-  ended up applying for Computer Science. It was quite random to be perfectly honest. I was looking to get back into
-  school to get some form of "routine" again, apart from going to work and going to the gym. I've always loved "tech"
-  more specifically consumer electronics and the "science" behind it. So I thought I would at least give it a shot, and
-  I did. But I realize now that I've been enrolled in the program for about 3 months that it is not what I expected, and
-  it is not for me. I've realized over the course of 5 years that I am in fact more of a visual and creative person. I
-  do not enjoy numbers and logic as much as I do visual and creative work. It took me 5 years, a BA degree and 3 months
-  of a a Computer Science program to realize who I really am. I know for some people this come across as stupid, but you
-  know what, in these past five years I've learned so much about myself and though I wish I could have figured it out
-  sooner, I am glad to have experienced everything I did. All the people I have met, the life long friendships formed,
-  the highs, the lows, the lessons and the small victories along the way makes it all worthwhile.
-</p>
-<p>
-  To my fellow com sci students I would like to sincerely thank you for the time I have been privileged to spend with all
-  of you. Whether we've gotten close or we've talked briefly in the hallway or during breaks. To all my group project members
-  and to all our professors. Thank you. Thank you for being a part of my journey and thank you for letting me have the honor
-  of being your class rep. You're a great bunch and I know many of you will go on and do amazing things. I'm sure you will.
-  I hope to see you around. If you ever want to talk over a cup of coffee/tea about anything and everything I'm just a DM away.
-  Maybe our paths will cross sometime when we're all working in the industry. Time will surely tell. Till then take care of
-  yourselves.
-</p>
+  <p>
+    In high school I studied Media & Communication. I entered the program with a love for photography and I ended up picking up graphic
+    design along the way. I had fun, excelled, and thrived working on creative projects. I went on to get straight A's and my projects
+    would be showcased before new students the following year. That is one of the things I miss the most, feeling a sense of mastery in
+    something. Hence why my teachers were shocked to learn that I would go on to study Business Administration at BI in Oslo. It was out
+    of left field looking when I look back at it now honestly haha. I loved photography and design but I did not see myself making "a lot"
+    of money doing that (which was my motivation at the time) so I wanted something that could provide stability, more cookie cutter if
+    you like (which is what I thought I wanted). I mean wearing a suit to work everyday making a lot of money would be cool right? haha.
+    I went on to graduate from BI with a bachelor's degree in Business Administration specializing in International Business. Something I
+    am immensely proud of, however, I had a feeling that I did not want to work 9 to 5 glued to a screen crunching numbers and staring at
+    spreadsheets all day.
+  </p>
+
+  <p>
+    I went on to work part time jobs for two years, with seemingly no direction and not really doing anything in particular to figure out
+    what I wanted to do. I suppose you could say that I was in a limbo before randomly looking for programs to get back into school. I
+    stumbled upon a few different programs but ended up applying for Computer Science. It was a bit of an arbitrary decision to be perfectly
+    honest. I was looking to get back into school to get some form of "routine" again, other than going to work and going to the gym. I have
+    always loved "tech" more specifically consumer electronics and the "science" behind it. So I thought "I owe it to myself to at least give
+    it a go", and I did. But I realize now, having been enrolled in the program for about 3 months, that it is not what I expected, and it is
+    not for me. I cannot say I am surprised, but you never know until you have tried it right? I finally mustered up the courage to do what I
+    couldn't do when I was at BI, and that is to drop out. I've realized over the course of 5 years that I am in fact more of a visual and
+    creative person. I do not enjoy numbers and logic as much as I do visual and creative work. It took me 5 years, a business degree and 3
+    months of a a Computer Science program to realize who I really am. That there is no "shame" in dropping out. If anything it shows that you
+    are self aware enough to know where to draw the line and get out. I know for some people this might come across as stupid, but you know what,
+    in these past five years I've learned so much about myself, I have grown heaps and bounds and though I wish I could have figured it out sooner,
+    I am glad to have experienced everything I did. It has all been a part of me finally coming to terms with who I really am. All the experiences,
+    the people I have met, the life long friendships formed, the lessons, the highs, the lows, and everything in between, makes it all worthwhile.
+  </p>
+
+  <p>
+    To my fellow Com Sci students I would like to sincerely thank you for the time I have been privileged to spend with all of you. Whether we've
+    gotten close or we've talked briefly in the hallway or during breaks. To all my group project members and to all our professors. Thank you.
+    Thank you for being a part of my journey and thank you for letting me have the honor of being your class rep.
+  </p>
+
+  <p>
+    I would like to apologize for any shortcomings as a class representative, and if I did not get to respond to your messages in a timely manner
+    I am truly sorry. I am more than open to any feedback you might have for me. You have all been very kind to me and for that I would like to
+    thank you once more. Also I would like to apologize for the lack of social events/activities, the current pandemic did not exactly help the
+    situation. However I hope you can still manage to meet up with each other and make connections outside of class. And for whatever it's worth
+    I'll be in and around campus from time to time even after I post this. I have a locker to clear out and certain things to get in order before
+    I leave for good lol. If you see me around campus, do not be afraid to reach out if there's anything I can do for you.
+  </p>
+
+  <p>
+    You're a great bunch and I know many of you will go on to do amazing things. That, I am certainly sure of. I hope to see you around. If you
+    ever want to talk over a cup of coffee/tea about anything and everything I'm just a DM away. I want to wish you all good luck moving forward.
+    Maybe our paths will cross sometime when we're all working in the industry. Time will surely tell. Till then take care of yourselves.
+  </p>
+
   <p>
     - Patrick James Hansen
   </p>
 
   <p>
-    TLDR: I'm dropping out because com sci is not for me. I realize I'm more of a visual/creative person and I'm going back to
-    my roots from high school, doing creative work. It took me five years to figure everything out but I'm glad I did.
+    TLDR: I'm dropping out because com sci is not for me. I realize I'm more of a visual/creative person and I'm going back to my roots from
+    high school, doing creative work. It took me five years to figure everything out but I'm glad I did. It was a pleasure working with you all,
+    thank you for letting me be your class rep. I'm here if you need to talk over a cup of coffee/tea. Best of luck to you all and take care.
   </p>
 
 </body>
